# KI-GUI

./: Dockerfile  README-EN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  solution.md  solution2.md  tasks.md  tasks2.md
api/: config.py  database.py  logger.py  main.py  models.py  utils.py
api/src/: routers.py
api/src/categories/: annotations.py  controllers.py  routers.py  schemas.py
api/src/courses/: annotations.py  controllers.py  routers.py  schemas.py
api/src/enrollments/: annotations.py  controllers.py  routers.py  schemas.py
api/src/roles/: annotations.py  controllers.py  routers.py  schemas.py
api/src/task_completions/: annotations.py  controllers.py  routers.py  schemas.py
api/src/tasks/: annotations.py  controllers.py  routers.py  schemas.py
api/src/users/: annotations.py  controllers.py  routers.py  schemas.py
tests/: test_schemathesis.py
