[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "marek.tremel",email = "tremelmarek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "ruff (>=0.11.0,<0.12.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "schemathesis (>=3.39.13,<4.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pytest-html (>=4.1.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "N",   # pep8-naming
    "PTH",  # use pathlib
]
preview = true
ignore = ["E501", "E712", "E711"]  # zbytecne to rve, co lze upravit formatter upravi

[tool.ruff.lint.pydocstyle]
convention = "google"